# Torilate

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMIT_GUIDELINES.md  COMMIT_GUIDLINES.md  CONTRIBUTING.md  ERROR_HANDLING_GUIDE.md  LICENSE.md  README.md  REFACTORING_EXAMPLE.md  torilate.c  torilate.h
lib/argtable3/: argtable3.c  argtable3.h
src/: torilate.c  torilate.h
src/cli/: cli.c  cli.h
src/error/: error.c  error.h
src/http/: http.c  http.h
src/net/: socket.h  socket_posix.c  socket_win32.c
src/socks/: socks4.c  socks4.h
src/util/: file.c  memory.c  parse.c  util.c  util.h
